<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dashboard"
    tools:context=".activities.ui.UI.DashboardActivity">
    <Button
        android:id="@+id/addcustomer"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:text="Add Student"
         />
    <Button
        android:id="@+id/viewcustomer"
        android:layout_marginTop="20dp"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:text="View Student" />

</LinearLayout>