...
        android:src="@drawable/noimg"
        />



    <EditText
        android:id="@+id/etfname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#f0f0f0"
...
