<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ui.SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Sign Up Form"
        android:textColor="@color/black"
        android:textSize="50sp" />


    <EditText
        android:id="@+id/etfname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#f0f0f0"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etlname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#f0f0f0"
        android:hint="Last name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#f0f0f0"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#f0f0f0"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="40sp" />
    <EditText
        android:id="@+id/cpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#f0f0f0"
        android:hint="ConfirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#f0f0f0"
        android:hint="Age"
        android:inputType="number"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#f0f0f0"
        android:hint="Address"
        android:textColor="@color/black"
        android:textSize="40sp" />


    <Button
        android:id="@+id/btnsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="#009e00"
        android:text="Sigup"
        android:textSize="30sp" />

</LinearLayout>